fix: failed tx error was not showing properly (#94)

--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -90,7 +90,7 @@
         display: block;
 
         .tooltip {
-          max-width: 200px;
+          max-width: 400px;
           height: auto;
           white-space: initial;
           width: max-content;
